# dotori-zenoh

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/dotori-cli/: Cargo.toml
crates/dotori-cli/src/: cli.rs  main.rs
crates/dotori-core/: Cargo.toml
crates/dotori-core/src/: config.rs  discover.rs  lib.rs  query.rs  registry.rs  scout.rs  session.rs  subscriber.rs  types.rs
crates/dotori-tui/: Cargo.toml
crates/dotori-tui/src/: app.rs  event.rs  lib.rs
crates/dotori-tui/src/views/: dashboard.rs  liveliness.rs  mod.rs  nodes.rs  query.rs  stream.rs  subscribe.rs  topics.rs
docs/superpowers/plans/: 2026-04-14-dotori-cli-implementation.md  2026-04-15-nodes-discovery-merge.md  2026-04-15-phase1-network-visibility.md  2026-04-15-tui-mouse-support.md  2026-04-16-liveliness-view.md
docs/superpowers/specs/: 2026-04-14-dotori-cli-design.md  2026-04-15-nodes-discovery-merge-design.md  2026-04-15-tui-mouse-support-design.md  2026-04-16-liveliness-view-design.md
