[package]
name = "dotori-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dotori"
path = "src/main.rs"

[dependencies]
dotori-core.workspace = true
dotori-tui.workspace = true
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
color-eyre.workspace = true
clap = { version = "4", features = ["derive"] }
